kubernetes/apps/media/prowlarr/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - prowlarr.blackcats.cc
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
